--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>Hello, I'm [Your Name]</h1>
+    <h1>Hello, I'm Sourabh Srivastava</h1>
     <p>Welcome to my portfolio</p>
   </header>
 
