--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Write a few lines about yourself here.</p>
+    <p>Skilled Frontend Developer with expertise in React, JavaScript, and web development technologies. Successfully contributed to the development of
+      visually appealing and user-friendly applications. Eager to take on challenging projects where I can apply my
+      technical skills and contribute to the success of a dynamic team</p>
   </section>
 
   <section id="skills">
@@ -24,19 +26,23 @@
       <li>HTML</li>
       <li>CSS</li>
       <li>JavaScript</li>
+      <li>React</li>
+      <li>Java</li>
+      <li>Python</li>
     </ul>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <p>List and link your best work here.</p>
+    <p>Rehmat Foundation</p>
+    <p>Personal Finance Tracker</p> 
   </section>
 
   <section id="contact">
     <h2>Contact Me</h2>
     <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required 
+      <input type="text" placeholder="Sourabh Srivastava" required />
+      <input type="email" placeholder="sourabhsri2208@gmail.com" required 
       <textarea placeholder="Your Message"></textarea>
       <button type="submit">Send</button>
     </form>
